5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4127/executions/1664_1398.log
== TEST (2019-04-16 10:02:20) 
-- CODE:
t= float(input("qual o tempo de voo? "))
if (t<200):
	print (5.000 + (100.t))
-- ERROR:
File "XXXX", line 3
    print (5.000 + (100.t))
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:02:54) 
-- CODE:
t= float(input("qual o tempo de voo? "))
if (t<200):
	msg= 5.000 + t*100
print(msg)
-- OUTPUT:
12105.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:02:54) 
-- CODE:
t= float(input("qual o tempo de voo? "))
if (t<200):
	msg= 5.000 + t*100
print(msg)
-- EXECUTION TIME:
0.125575
-- TEST CASE 1:
---- input:
121
---- correct output:
17100.0
---- user output:
12105.0
-- TEST CASE 2:
---- input:
450
---- correct output:
50500.0
---- user output:

-- TEST CASE 3:
---- input:
1
---- correct output:
5100.0
---- user output:
105.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:02:56) 
-- CODE:
t= float(input("qual o tempo de voo? "))
if (t<200):
	msg= 5.000 + t*100
print(msg)
-- OUTPUT:
12105.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:04:15) 
-- CODE:
t= float(input("qual o tempo de voo? "))
exc= t-200
if (t<200):
	msg= 5.000 + t*100
else:
	msg= 8.000 + t*100 + exc*90
print(msg)
-- OUTPUT:
12105.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:04:22) 
-- CODE:
t= float(input("qual o tempo de voo? "))
exc= t-200
if (t<200):
	msg= 5.000 + t*100
else:
	msg= 8.000 + t*100 + exc*90
print(msg)
-- OUTPUT:
12105.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:05:58) 
-- CODE:
t= float(input("qual o tempo de voo? "))
exc= t-200
if (t<200):
	msg= 5.000 + t*100
else:
	msg= 8.000 + 100*t + exc*90
print(msg)
-- OUTPUT:
12105.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:06:02) 
-- CODE:
t= float(input("qual o tempo de voo? "))
exc= t-200
if (t<200):
	msg= 5.000 + t*100
else:
	msg= 8.000 + 100*t + exc*90
print(msg)
-- EXECUTION TIME:
0.179591
-- TEST CASE 1:
---- input:
121
---- correct output:
17100.0
---- user output:
12105.0
-- TEST CASE 2:
---- input:
450
---- correct output:
50500.0
---- user output:
67508.0
-- TEST CASE 3:
---- input:
1
---- correct output:
5100.0
---- user output:
105.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:06:29) 
-- CODE:
t= float(input("qual o tempo de voo? "))
exc= t-200
if (t<200):
	msg= 5.000 + t*100
else:
	msg= 8.000 + 100*t + exc*90
print(round(msg,2))
-- OUTPUT:
12105.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:06:35) 
-- CODE:
t= float(input("qual o tempo de voo? "))
exc= t-200
if (t<200):
	msg= 5.000 + t*100
else:
	msg= 8.000 + 100*t + exc*90
print(round(msg,2))
-- EXECUTION TIME:
0.130363
-- TEST CASE 1:
---- input:
121
---- correct output:
17100.0
---- user output:
12105.0
-- TEST CASE 2:
---- input:
450
---- correct output:
50500.0
---- user output:
67508.0
-- TEST CASE 3:
---- input:
1
---- correct output:
5100.0
---- user output:
105.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:07:40) 
-- CODE:
t= float(input("qual o tempo de voo? "))
exc= t-200
if (t<200):
	msg= 5.000 + t*100
else:
	msg= 8.000 + ((100*t) + (exc*90))
print(round(msg,2))
-- OUTPUT:
12105.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:09:22) 
-- CODE:
t= float(input("qual o tempo de voo? "))
exc= t-200
if (t>200)
	msg= 8.000 + 100.00*200 + (exc*90.00)
print (msg)
-- ERROR:
File "XXXX", line 3
    if (t>200)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:09:26) 
-- CODE:
t= float(input("qual o tempo de voo? "))
exc= t-200
if (t>200);
	msg= 8.000 + 100.00*200 + (exc*90.00)
print (msg)
-- ERROR:
File "XXXX", line 3
    if (t>200);
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:09:30) 
-- CODE:
t= float(input("qual o tempo de voo? "))
exc= t-200
if (t>200):
	msg= 8.000 + 100.00*200 + (exc*90.00)
print (msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print (msg)
NameError: name 'msg' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:10:06) 
-- CODE:
t= float(input("qual o tempo de voo? "))
exc= t-200
if (t>200):
	msg= 8.000 + 100*200 + (exc*90.00)
print (msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print (msg)
NameError: name 'msg' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:11:49) 
-- CODE:
t= float(input("qual o tempo de voo? "))
exc= t-200
if (T<=200):
	print(5000+100*t)
else:
	print(8000+100*200+(exc*90))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (T<=200):
NameError: name 'T' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:11:59) 
-- CODE:
t= float(input("qual o tempo de voo? "))
exc= t-200
if (y<=200):
	print(5000+100*t)
else:
	print(8000+100*200+(exc*90))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (y<=200):
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:12:07) 
-- CODE:
t= float(input("qual o tempo de voo? "))
exc= t-200
if (t<=200):
	print(5000+100*t)
else:
	print(8000+100*200+(exc*90))
-- OUTPUT:
17100.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:12:10) 
-- CODE:
t= float(input("qual o tempo de voo? "))
exc= t-200
if (t<=200):
	print(5000+100*t)
else:
	print(8000+100*200+(exc*90))
-- EXECUTION TIME:
0.224384
-- TEST CASE 1:
---- input:
121
---- correct output:
17100.0
---- user output:
17100.0
-- TEST CASE 2:
---- input:
450
---- correct output:
50500.0
---- user output:
50500.0
-- TEST CASE 3:
---- input:
1
---- correct output:
5100.0
---- user output:
5100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
